# translate-gemma-rs

./: .gitignore  Cargo.toml
examples/: english.md  german.md
src/: main.rs
